<resources>
    <string name="app_name">wnichols-FeelsBook</string>
    <string name="emotionsTitle">"Emotions:"</string>
    <string name="emotionCountsTitle">"Count:"</string>
    <string name="emotion1ButtonText">"Love"</string>
    <string name="emotion2ButtonText">"Joy"</string>
    <string name="emotion3ButtonText">"Surprise"</string>
    <string name="emotion4ButtonText">"Anger"</string>
    <string name="emotion5ButtonText">"Sadness"</string>
    <string name="emotion6ButtonText">"Fear"</string>
    <string name="commentTitle">"Enter an optional comment below:"</string>
    <string name="commentText">"Enter up to 100 characters"</string>

    <string name="title_activity_view_history">viewHistory</string>
    <string name="historyTitle">History:</string>
    <string name="menuDelete">Delete</string>
    <string name="menuEdit">Edit</string>

    <string name="title_activity_edit_emotions">editEmotions</string>
    <string name="editTitle">Edit:</string>
        <string name="oldDateTitle">Old Date:</string>
    <string name="newDateTitle">New Date:</string>
    <string name="newDateHint">Enter a Date:</string>
    <string name="oldTimeTitle">Old Time:</string>
    <string name="newTimeTitle">New time:</string>
    <string name="newTimeHint">Enter a time:</string>
    <string name="editCommentTitle">Edit you comment below:</string>
    <string name="submitButton">Submit</string>


</resources>
