<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.williamnichols.wnichols_feelsbook.editEmotions">

    <LinearLayout
        android:id="@+id/HoriLayoutContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/leftSpacer"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.15"></RelativeLayout>

        <RelativeLayout
            android:id="@+id/mainContent"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.7">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawHorizontalTrack="true">

                <TextView
                    android:id="@+id/editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editTitle"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/emotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/oldDateTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oldDateTitle" />


                <TextView
                    android:id="@+id/oldDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/newDateTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newDateTitle" />

                <EditText
                    android:id="@+id/editDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/newDateHint"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/oldTimeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oldTimeTitle" />

                <TextView
                    android:id="@+id/oldTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/newTimeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newTimeTitle" />

                <EditText
                    android:id="@+id/editTimeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Enter a time"
                    android:inputType="time" />

                <TextView
                    android:id="@+id/editCommentTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editCommentTitle" />

                <EditText
                    android:id="@+id/commentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:maxLength="100"
                    android:text="" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="handleSubmit"
                    android:text="@string/submitButton" />


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rightSpacer"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.15"></RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
